<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/adapter_tested"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:baselineAligned="false"
    android:padding="8dp"
    android:paddingLeft="8dp"
    android:paddingTop="4dp"
    android:paddingRight="8dp"
    android:paddingBottom="4dp"
    tools:context=".activities.LoadingActivity">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="4"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/adapter_iv_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/generalContentDescription"
                android:paddingTop="5dp"
                app:srcCompat="@drawable/ic_valid" />

            <TextView
                android:id="@+id/adapter_tv_state"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:layout_weight="2"
                android:gravity="bottom|center_horizontal"
                android:text="@string/testState"
                android:textColor="@color/layoutColor"
                android:textSize="18sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="15"
        android:orientation="vertical"
        android:paddingStart="8dp"
        android:paddingLeft="8dp"
        android:paddingEnd="0dp"
        android:paddingRight="0dp">

        <TextView
            android:id="@+id/adapter_tv_student_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|top"
            android:singleLine="true"
            android:text="@string/testName"
            android:textColor="@color/layoutColor"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/adapter_tv_student_university"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/testUniversity"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/adapter_tv_student_course"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:singleLine="true"
                android:text="@string/testCourse"
                android:textSize="14sp" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/adapter_tv_student_grade"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|center_horizontal|center_vertical"
            android:singleLine="true"
            android:text="@string/testGrade"
            android:textColor="@color/layoutColor"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>