<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal|center_vertical"
    android:layout_margin="16dp"
    android:gravity="center_horizontal|center_vertical"
    android:orientation="vertical"
    tools:context=".activities.PINActivity">
    <LinearLayout
        android:id="@+id/detailview_ll_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/view_detail_iv_valid"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="end"
                android:adjustViewBounds="false"
                android:contentDescription="@string/generalContentDescription"
                android:cropToPadding="false"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:paddingEnd="8dp"
                android:paddingRight="8dp"
                app:srcCompat="@drawable/ic_questionable" />
        </LinearLayout>

        <TextView
            android:id="@+id/view_detail_tv_valid"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:paddingStart="8dp"
            android:paddingLeft="8dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/pinActivity_tv_state"
            android:textColor="@color/layoutColor"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:hint="@string/masterView_tf_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/masterView_tiet_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_weight="1"
            android:hint="@string/masterView_tf_surname"
            android:paddingRight="0dp"
            android:paddingEnd="0dp"
            android:paddingLeft="8dp"
            android:paddingStart="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/masterView_tiet_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"
                android:inputType="none"
                android:singleLine="true" />


        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/pinActivity_tv_enter" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pinactivity_til_pin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pinactivity_ed_pin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/detailView_pin"
            android:inputType="numberDecimal"
            app:hintEnabled="true" />


    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/pinactivity_bu_back"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="16dp"
            android:layout_weight="1"
            android:text="@string/pinActivity_button_back"
            tools:ignore="ButtonStyle,RtlHardcoded" />

        <Button
            android:id="@+id/pinactivity_bu_ok"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_weight="1"
            android:text="@string/pinActivity_button_ok"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>