<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center|center_vertical"
    android:orientation="vertical"
    tools:context=".activities.MasterViewActivity">

    <LinearLayout
        android:id="@+id/master_view_hint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/master_iv_logo"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:contentDescription="@string/generalContentDescription"
            app:srcCompat="@drawable/logo_rd_loading" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginRight="8dp"
                    android:contentDescription="@string/generalContentDescription"
                    android:foregroundGravity="right"
                    app:srcCompat="@drawable/ic_information" />
            </LinearLayout>

            <TextView
                android:id="@+id/master_tv_manual"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="start|center_vertical"
                android:text="@string/masterView_heading"
                android:textColor="@color/layoutColor"
                android:textSize="24sp"
                android:textStyle="bold" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:paddingLeft="64dp"
            android:paddingRight="64dp"
            android:text="@string/masterView_instructions" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/generalContentDescription"
            app:srcCompat="@drawable/logo_his" />
    </LinearLayout>

    <ListView
        android:id="@+id/master"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:clickable="true"
        android:contentDescription="@string/generalContentDescription"
        android:focusable="true"
        android:foreground="@drawable/ic_add_white_48"
        app:srcCompat="@drawable/ic_add_white_48"
        tools:ignore="UnusedAttribute" />

</FrameLayout>